Fix mobile menu in dark mode

--- a/main/assets/main.scss
+++ b/main/assets/main.scss
@@ -178,7 +178,8 @@ a {
   }
 
   html,
-  body {
+  body,
+  .navbar-menu {
     background-color: $nord1;
     color: $nord6;
   }
